--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AskForConsultationComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/AdditionalComponents/AskForConsultationComponent.razor
@@ -71,7 +71,8 @@
 
     [CascadingParameter]
     public int ReportId { get; set; }
-
+    [Parameter]
+    public CancellationTokenSource TokenSource { get; set; }
     [Parameter]
     public EventCallback<List<string>> OnAdded { get; set; }
 
