--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Prescription/AdditionalComponents/PrescriptionPreviewModal.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Prescription/AdditionalComponents/PrescriptionPreviewModal.razor
@@ -73,6 +73,8 @@
 
     [Parameter]
     public EventCallback OnClose { get; set; }
+    [Parameter]
+    public CancellationTokenSource SourceToken { get; set; } 
 
     private bool loading;
     PrescriptionToShowPatientDto prescription = new();
