--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientPreview.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Patients/PatientPreview.razor
@@ -13,6 +13,7 @@
 @inject NavigationManager _navigationManager
 
 
+
 <h3>PatientPreview</h3>
 
 
@@ -38,11 +39,12 @@
 
     [SupplyParameterFromQuery]
     private string? PatientId { get; set; }
-    
+
     [SupplyParameterFromQuery]
     private string? PrescriptionRequestId { get; set; }
 
-
+    [Parameter]
+    public CancellationTokenSource tokenSource { get; set; }
 
     private Patient.Domain.Entities.Actors.Patient currentPatient = new();
 
@@ -64,4 +66,6 @@
         }
     }
     //zrobic to jako modal ;) - zeby mozna bylo sobie to gdziekolwiek wywolywac
+
+    
 }
