--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MyAccount/MyAccount.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MyAccount/MyAccount.razor
@@ -1,6 +1,6 @@
 ﻿@layout Patient.Api.Client.Layout.MyAccount.PatientAccountLayout
 
-@rendermode InteractiveServer
+@rendermode @(new InteractiveServerRenderMode(false))
 @page "/pacjent/konto"
 
 @using Patient.Application.Users
