--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Prescription/Prescriptions.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Prescription/Prescriptions.razor
@@ -95,6 +95,7 @@
             showReminder = true;
         }
         mainComponentInitialized = true;
+        StateHasChanged();
     }
 
     private void ShowAskForPrescriptionModal()
