--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/Reports.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/Reports.razor
@@ -86,7 +86,7 @@
             showReminder = true;
         }
         mainComponentInitialized = true;
-
+        StateHasChanged();
     }
 
     public void Dispose()
